# string_art

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench_char_brightnesses.rs  char_brightnesses.rs  main.rs  pixel_density_lut.rs  text_art.rs
files/output/: test-pattern.txt
src/: char_brightness_lut.rs  char_brightness_lut_old.rs  char_density_lut.rs  char_pixel_density_lut.rs  char_pixel_density_lut_builder.rs  lib.rs  main.rs  pixel_density_lut.rs  text_art.rs
src/char_map/: char_brightness_map.rs  mod.rs
src/char_pixel_density/: errors.rs  glyph_dimensions.rs  lut.rs  mod.rs
src/image/: mod.rs
src/string_art/: char_brightness_lut.rs  char_brightness_map.rs  mod.rs
src/window/: color.rs  config.rs  image.rs  mod.rs  pixel.rs
