[package]
name = "string_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = {version = "0.25.0"}
rusttype = "0.9.3"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "main"
harness = false
